# memoryProject

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  streamlit_app.py
app/analysis/: text_analyzer.py
app/api/: main.py
app/core/: settings.py
app/memory/: store.py
app/tests/: test_smoke.py
docs/: evaluation_loop.md  implementation_roadmap.md  plugin_integration_design.md
docs/ginza/: ginza_intro.md
docs/scoring/: README.md  current_scoring.md
scripts/: check_ginza.py  generate_ginza_intro_pdf.py
