[project]
name = "long-memory-prototype"
version = "0.1.0"
description = "Local-first prototype environment for a long-term memory system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "numpy<2",
    "sentence-transformers>=5.4.1",
    "spacy<3.8",
    "streamlit>=1.56.0",
    "sudachidict-core>=20260116",
    "sudachipy>=0.6.11",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
